==> zjcszn/embedded-lib/1. Base Framework/1.8 BootLoader/OpenBLT/Target/Source/ARMCM4_S32K14/flash.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "device_registers.h"                    /* device registers                   */
#define FLASH_INVALID_SECTOR_IDX        (0xff)
#define FLASH_INVALID_ADDRESS           (0xffffffff)
#define FLASH_WRITE_BLOCK_SIZE          (1024)
#define FLASH_ERASE_BLOCK_SIZE          (FEATURE_FLS_PF_BLOCK_SECTOR_SIZE)
#define FLASH_TOTAL_SECTORS             (sizeof(flashLayout)/sizeof(flashLayout[0]))
#define FLASH_END_ADDRESS               (flashLayout[FLASH_TOTAL_SECTORS-1].sector_start + \
                                         flashLayout[FLASH_TOTAL_SECTORS-1].sector_size - 1)
#define FLASH_FTFC_CMD_PROGRAM_PHRASE   (0x07U)
#define FLASH_FTFC_CMD_ERASE_SECTOR     (0x09U)
#define BOOT_FLASH_VECTOR_TABLE_CS_OFFSET    (0x3F8)
#define BOOT_FLASH_CUSTOM_LAYOUT_ENABLE (0u)
#include "flash_layout.c"

blt_bool FlashWrite(blt_addr addr, blt_int32u len, blt_int8u *data)
{
  blt_bool result = BLT_TRUE;
  blt_addr base_addr;

  /* validate the len parameter */
  if ((len - 1) > (FLASH_END_ADDRESS - addr))
  {
    result = BLT_FALSE;
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* make sure the addresses are within the flash device */
    if ((FlashGetSectorIdx(addr) == FLASH_INVALID_SECTOR_IDX) || \
        (FlashGetSectorIdx(addr+len-1) == FLASH_INVALID_SECTOR_IDX))
    {
      result = BLT_FALSE;
    }
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* if this is the bootblock, then let the boot block manager handle it */
    base_addr = (addr/FLASH_WRITE_BLOCK_SIZE)*FLASH_WRITE_BLOCK_SIZE;
    if (base_addr == flashLayout[0].sector_start)
    {
      /* let the boot block manager handle it */
      result = FlashAddToBlock(&bootBlockInfo, addr, data, len);
    }
    else
    {
      /* let the block manager handle it */
      result = FlashAddToBlock(&blockInfo, addr, data, len);
    }
  }

  /* give the result back to the caller */
  return result;
}

blt_bool FlashErase(blt_addr addr, blt_int32u len)
{
  blt_bool  result = BLT_TRUE;
  blt_int8u first_sector_idx;
  blt_int8u last_sector_idx;

  /* validate the len parameter */
  if ((len - 1) > (FLASH_END_ADDRESS - addr))
  {
    result = BLT_FALSE;
  }
  
  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* obtain the first and last sector entry indices to the flashLayout[] array. */
    first_sector_idx = FlashGetSectorIdx(addr);
    last_sector_idx  = FlashGetSectorIdx(addr+len-1);
    /* check them */
    if ((first_sector_idx == FLASH_INVALID_SECTOR_IDX) ||
        (last_sector_idx == FLASH_INVALID_SECTOR_IDX))
    {
      result = BLT_FALSE;
    }
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* erase the sectors */
    result = FlashEraseSectors(first_sector_idx, last_sector_idx);
  }

  /* give the result back to the caller */
  return result;
}

static blt_bool FlashWriteBlock(tFlashBlockInfo *block)
{
  blt_bool           result = BLT_TRUE;
  blt_addr           prog_addr;
  blt_int8u        * prog_data;
  blt_int8u  const * flash_data;
  blt_int32u         phrase_cnt;
  blt_int8u  const   phrase_size = FEATURE_FLS_PF_BLOCK_WRITE_UNIT_SIZE;
  blt_int8u          phrase_byte_idx;

  /* check that the address is actually within flash */
  if (FlashGetSectorIdx(block->base_addr) == FLASH_INVALID_SECTOR_IDX)
  {
    result = BLT_FALSE;
  }

#if (BOOT_FLASH_CRYPTO_HOOKS_ENABLE > 0)
  #if (BOOT_NVM_CHECKSUM_HOOKS_ENABLE == 0)
  /* note that the bootblock is already decrypted in FlashWriteChecksum(), if the
   * internal checksum mechanism is used. Therefore don't decrypt it again.
   */
  if (block != &bootBlockInfo)
  #endif
  {
    /* perform decryption of the program data before writing it to flash memory. */
    if (FlashCryptoDecryptDataHook(block->data, FLASH_WRITE_BLOCK_SIZE) == BLT_FALSE)
    {
      result = BLT_FALSE;
    }
  }
#endif

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* program all phrases in the block one by one */
    for (phrase_cnt=0; phrase_cnt<(FLASH_WRITE_BLOCK_SIZE/phrase_size); phrase_cnt++)
    {
      prog_addr = block->base_addr + (phrase_cnt * phrase_size);
      prog_data = &block->data[phrase_cnt * phrase_size];
      /* keep the watchdog happy */
      CopService();
      /* check CCIF to verify that the previous command is completed. */
      if ((FTFC->FSTAT & FTFC_FSTAT_CCIF_MASK) == FTFC_FSTAT_CCIF(0))
      {
        /* FTFC module should not be busy anymore. flag error and abort. */
        result = BLT_FALSE;
        break;
      }
      /* clear the old errors that might still be set from a previous operation. */
      FTFC->FSTAT = FTFC_FSTAT_FPVIOL_MASK | FTFC_FSTAT_ACCERR_MASK | FTFC_FSTAT_RDCOLERR_MASK;
      /* prepare the program phrase command.
       * FTFC->FCCOB[3] = FCCOB0
       */
      FTFC->FCCOB[3] = FLASH_FTFC_CMD_PROGRAM_PHRASE;
      /* set the program base address.
       * FTFC->FCCOB[2] = FCCOB1
       * FTFC->FCCOB[1] = FCCOB2
       * FTFC->FCCOB[0] = FCCOB3
       */
      FTFC->FCCOB[2] = (blt_int8u)(((blt_addr)(prog_addr >> 16U)) & 0xFFU);
      FTFC->FCCOB[1] = (blt_int8u)(((blt_addr)(prog_addr >>  8U)) & 0xFFU);
      FTFC->FCCOB[0] = (blt_int8u)(prog_addr & 0xFFU);
      /* set the phrase bytes that should be programmed.
       * FTFC->FCCOB[7]  = FCCOB4
       * FTFC->FCCOB[6]  = FCCOB5
       * FTFC->FCCOB[5]  = FCCOB6
       * FTFC->FCCOB[4]  = FCCOB7
       * FTFC->FCCOB[11] = FCCOB8
       * FTFC->FCCOB[10] = FCCOB9
       * FTFC->FCCOB[9]  = FCCOBA
       * FTFC->FCCOB[8]  = FCCOBB
       */
      FTFC->FCCOB[4]  = prog_data[0];
      FTFC->FCCOB[5]  = prog_data[1];
      FTFC->FCCOB[6]  = prog_data[2];
      FTFC->FCCOB[7]  = prog_data[3];
      FTFC->FCCOB[8]  = prog_data[4];
      FTFC->FCCOB[9]  = prog_data[5];
      FTFC->FCCOB[10] = prog_data[6];
      FTFC->FCCOB[11] = prog_data[7];
      /* Execute the command. Note that it needs to run from RAM. */
      FlashCommandSequence();
      /* Check the results. */
      if ((FTFC->FSTAT & (FTFC_FSTAT_MGSTAT0_MASK | FTFC_FSTAT_FPVIOL_MASK |
          FTFC_FSTAT_ACCERR_MASK | FTFC_FSTAT_RDCOLERR_MASK)) != 0U)
      {
        /* could not perform program operation */
        result = BLT_FALSE;
        /* error detected so don't bother continuing with the loop */
        break;
      }
      /* verify that the written data is actually there. */
      flash_data = ((blt_int8u const *)prog_addr);
      for (phrase_byte_idx = 0; phrase_byte_idx < phrase_size; phrase_byte_idx++)
      {
        /* check that the byte in flash has the same value as what was programmed. */
        if (flash_data[phrase_byte_idx] != prog_data[phrase_byte_idx])
        {
          /* verification of programmed data failed. */
          result = BLT_FALSE;
          /* error detected so don't bother continuing with the loop */
          break;

        }
      }
    }
  }

  /* Give the result back to the caller. */
  return result;
}

static blt_bool FlashEraseSectors(blt_int8u first_sector_idx, blt_int8u last_sector_idx)
{
  blt_bool   result = BLT_TRUE;
  blt_int8u  sectorIdx;
  blt_addr   sectorBaseAddr;
  blt_int32u sectorSize;
  blt_int8u  blockIdx;
  blt_addr   blockBaseAddr;
  blt_int8u  totalBlocks;

  /* validate the sector numbers */
  if (first_sector_idx > last_sector_idx)
  {
    result = BLT_FALSE;
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    if (last_sector_idx > (FLASH_TOTAL_SECTORS-1))
    {
      result = BLT_FALSE;
    }
  }

  /* only continue if all is okay so far */
  if (result == BLT_TRUE)
  {
    /* erase the sectors one by one */
    for (sectorIdx = first_sector_idx; sectorIdx <= last_sector_idx; sectorIdx++)
    {
      /* service the watchdog */
      CopService();
      /* get information about the sector */
      sectorBaseAddr = flashLayout[sectorIdx].sector_start;
      sectorSize = flashLayout[sectorIdx].sector_size;
      /* validate the sector information */
      if ( (sectorBaseAddr == FLASH_INVALID_ADDRESS) || (sectorSize == 0) )
      {
        /* invalid sector information. flag error and abort erase operation */
        result = BLT_FALSE;
        break;
      }
      
      /* each sector could contain more than just one block. make sure the base address
       * of the sector is block aligned.
       */
      if ((sectorBaseAddr % FLASH_ERASE_BLOCK_SIZE) != 0)
      {
        /* sector base address not aligned to the start of a block. flag error and abort
         * erase operation
         */
        result = BLT_FALSE;
        break;
      }

      /* make sure the sector size is an exact multiple of the block size. */
      if ((sectorSize % FLASH_ERASE_BLOCK_SIZE) != 0)
      {
        /* sector base address not aligned to the start of a block. flag error and abort
         * erase operation
         */
        result = BLT_FALSE;
        break;
      }

      /* erase the sector one block at a time. */
      totalBlocks = sectorSize / FLASH_ERASE_BLOCK_SIZE;
      for (blockIdx = 0; blockIdx < totalBlocks; blockIdx++)
      {
        /* service the watchdog */
        CopService();
        /* store the block base address. */
        blockBaseAddr = sectorBaseAddr + (blockIdx * FLASH_ERASE_BLOCK_SIZE);
        /* check CCIF to verify that the previous command is completed. */
        if ((FTFC->FSTAT & FTFC_FSTAT_CCIF_MASK) == FTFC_FSTAT_CCIF(0))
        {
          /* FTFC module should not be busy anymore. flag error and abort. */
          result = BLT_FALSE;
          break;
        }
        /* clear the old errors that might still be set from a previous operation. */
        FTFC->FSTAT = FTFC_FSTAT_FPVIOL_MASK | FTFC_FSTAT_ACCERR_MASK | FTFC_FSTAT_RDCOLERR_MASK;
        /* prepare the sector erase command.
         * FTFC->FCCOB[3] = FCCOB0
         */
        FTFC->FCCOB[3] = FLASH_FTFC_CMD_ERASE_SECTOR;
        /* set the erase sector base address. note that in this function that means the
         * block base address.
         * FTFC->FCCOB[2] = FCCOB1
         * FTFC->FCCOB[1] = FCCOB2
         * FTFC->FCCOB[0] = FCCOB3
         */
        FTFC->FCCOB[2] = (blt_int8u)(((blt_addr)(blockBaseAddr >> 16U)) & 0xFFU);
        FTFC->FCCOB[1] = (blt_int8u)(((blt_addr)(blockBaseAddr >>  8U)) & 0xFFU);
        FTFC->FCCOB[0] = (blt_int8u)(blockBaseAddr & 0xFFU);
        /* Execute the command. Note that it needs to run from RAM. */
        FlashCommandSequence();
        /* Check the results. */
        if ((FTFC->FSTAT & (FTFC_FSTAT_MGSTAT0_MASK | FTFC_FSTAT_FPVIOL_MASK |
            FTFC_FSTAT_ACCERR_MASK | FTFC_FSTAT_RDCOLERR_MASK)) != 0U)
        {
          /* could not perform erase operation */
          result = BLT_FALSE;
          /* error detected so don't bother continuing with the loop */
          break;
        }
      }

      /* Only continue with the next sector if all is okay so far. */
      if (result == BLT_FALSE)
      {
        break;
      }
    }
  }

  /* give the result back to the caller */
  return result;
}
